Styling Hero section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello! I am</p>
-    <h1>Rebeca GSP</h1>
+   <div class="hero">
+        <p>Hello I am</p>
+        <h1>Rebeca GSP</h1>
+        <h2 class="mb-5">Mexican Front End Developer</h2>
+        <div>
+            <a href="#" class="btn btn-branding">Get started</a>
+        </div>
+    </div>
 </body>
 </html>
