--- a/index.html
+++ b/index.html
@@ -13,12 +13,63 @@
     <title>Document</title>
 </head>
 <body>
-   <div class="hero">
+    <div class="hero">
         <p>Hello I am</p>
         <h1>Rebeca GSP</h1>
         <h2 class="mb-5">Mexican Front End Developer</h2>
         <div>
             <a href="#" class="btn btn-branding">Get started</a>
+        </div>
+    </div>
+    <p class="text-center m-5">My Projects</p>
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col d-none d-lg-block">
+                <img src="/images/yogurt.png" class="img-fluid" alt="">
+            </div>
+            <div class="col">
+                <div class="project-description">
+                    <h2 class="mb-5">
+                        Yogurt Project
+                    </h2>
+                    <p class="mb-5 text-muted"> 
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. 
+                    </p>
+                    <a href="" class="btn btn-branding-outline">Learn more</a>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-5">
+            <div class="col">
+                <div class="project-description">
+                    <h2 class="mb-5">
+                        Weather Project
+                    </h2>
+                    <p class="mb-5 text-muted"> 
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. 
+                    </p>
+                    <a href="" class="btn btn-branding-outline">Learn more</a>
+                </div>
+            </div>
+            <div class="col d-none d-lg-block">
+                <img src="/images/weather.png" class="img-fluid" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col d-none d-lg-block">
+                <img src="/images/dictionary.png" class="img-fluid" alt="">
+            </div>
+            <div class="col">
+                <div class="project-description">
+                    <h2 class="mb-5">
+                        Dictionary Project
+                    </h2>
+                    <p class="mb-5 text-muted"> 
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. 
+                    </p>
+                    <a href="" class="btn btn-branding-outline">Learn more</a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
