--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
     <title>About me</title>
 </head>
 <body>
-    <div class="about-header container">
+    <div class="content-container container">
         <div class="row">
             <div class="col-lg-6">
-                <div class="about-header-content">
+                <div class="content">
                     <h1 class="mb-4">Hi I´m Rebeca GSP</h1>
                     <h2 class="mb-4">Full Stack Creative</h2>
                     <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla.</p>
