--- a/index.html
+++ b/index.html
@@ -14,6 +14,38 @@
     <title>Rebeca GSP Portfolio</title>
 </head>
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+            <a href="/">
+                <img src="/images/logo.png" class="logo d-none d-md-block" alt="Logo">
+            </a>
+            <a href="/">
+                <img src="/images/smallLogo.jpeg" class="logo d-block d-md-none" alt="Logo">
+            </a>
+            <ul>
+                <li class="active">
+                    <a href="/">
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="/about.html">
+                        About
+                    </a>
+                </li>
+                <li>
+                    <a href="/work.html">
+                        Work
+                    </a>
+                </li>
+                <li>
+                    <a href="/contact.html">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <div class="hero">
         <p>Hello I am</p>
         <h1>Rebeca GSP</h1>
