--- a/index.html
+++ b/index.html
@@ -104,6 +104,31 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+                <div>
+                    <h4>Work Inquiry</h4>
+                    <p class="text-muted">Let´s work together!</p>
+                </div>
+                <div>
+                    <a href="" class="btn btn-branding mt-3">Let´s talk here</a>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mb-4">
+                <a href="mailto:myemail@gmail.com" class="email-link">myemail@gmail.com</a>
+            </div>
+            <div class="social-links d-flex justify-content-center">
+                <a href="https://www.instagram.com/myinsta" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.github.com/mygithub" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.facebook.com/myfacebook" target="_blank">
+                    <i class="fab fa-facebook"></i>
+                </a>
+            </div>        
+        </footer>
     </div>
 </body>
 </html>
