--- a/index.html
+++ b/index.html
@@ -11,35 +11,36 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ad64e497cf.js" crossorigin="anonymous"></script>
-    <title>Rebeca GSP Portfolio</title>
+    <meta name="description" content="I am a Front End designer from Mexico, with master in UX and extense experience in UI and Front End development">
+    <title>Front End developer - Rebeca GSP</title>
 </head>
 <body>
     <div class="container">
         <nav class="d-flex justify-content-between">
-            <a href="/">
-                <img src="/images/logo.png" class="logo d-none d-md-block" alt="Logo">
+            <a href="/" title="Homepage">
+                <img src="/images/logo.png" class="logo d-none d-md-block" alt="Rebeca GSP Logo">
             </a>
-            <a href="/">
-                <img src="/images/smallLogo.jpeg" class="logo d-block d-md-none" alt="Logo">
+            <a href="/" title="Homepage">
+                <img src="/images/smallLogo.jpeg" class="logo d-block d-md-none" alt="Rebeca GSP Logo">
             </a>
             <ul>
                 <li class="active">
-                    <a href="/">
+                    <a href="/" title="Homepage">
                         Home
                     </a>
                 </li>
                 <li>
-                    <a href="/about.html">
+                    <a href="/about.html" title="About Rebeca GSP">
                         About
                     </a>
                 </li>
                 <li>
-                    <a href="/work.html">
+                    <a href="/work.html" title="Work of Rebeca GSP"> 
                         Work
                     </a>
                 </li>
                 <li>
-                    <a href="/contact.html">
+                    <a href="/contact.html" title="Contact Rebeca GSP">
                         Contact
                     </a>
                 </li>
@@ -51,14 +52,14 @@
         <h1>Rebeca GSP</h1>
         <h2 class="mb-5">Mexican Front End Developer</h2>
         <div>
-            <a href="#" class="btn btn-branding">Get started</a>
+            <a href="/contact.html" class="btn btn-branding" title="Contact Rebeca GSP">Contact me</a>
         </div>
     </div>
-    <p class="text-center m-5">My Projects</p>
+    <p class="text-center m-5">Scroll down to see my areas of experience</p>
     <div class="container">
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="/images/yogurt.png" class="img-fluid" alt="">
+                <img src="/images/yogurt.png" class="img-fluid" alt="Yogurt app preview">
             </div>
             <div class="col">
                 <div class="project-description">
@@ -68,7 +69,7 @@
                     <p class="mb-5 text-muted"> 
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. 
                     </p>
-                    <a href="" class="btn btn-branding-outline">Learn more</a>
+                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
                 </div>
             </div>
         </div>
@@ -81,16 +82,16 @@
                     <p class="mb-5 text-muted"> 
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. 
                     </p>
-                    <a href="" class="btn btn-branding-outline">Learn more</a>
+                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
                 </div>
             </div>
             <div class="col d-none d-lg-block">
-                <img src="/images/weather.png" class="img-fluid" alt="">
+                <img src="/images/weather.png" class="img-fluid" alt="Weather App preview">
             </div>
         </div>
         <div class="row">
             <div class="col d-none d-lg-block">
-                <img src="/images/dictionary.png" class="img-fluid" alt="">
+                <img src="/images/dictionary.png" class="img-fluid" alt="Dictionary App preview">
             </div>
             <div class="col">
                 <div class="project-description">
@@ -100,34 +101,39 @@
                     <p class="mb-5 text-muted"> 
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. 
                     </p>
-                    <a href="" class="btn btn-branding-outline">Learn more</a>
+                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
                 </div>
             </div>
         </div>
         <footer>
             <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
                 <div>
-                    <h4>Work Inquiry</h4>
+                    <h3>Work Inquiry</h3>
                     <p class="text-muted">Let´s work together!</p>
                 </div>
                 <div>
-                    <a href="" class="btn btn-branding mt-3">Let´s talk here</a>
+                    <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Rebeca GSP">Let´s talk here</a>
                 </div>
             </div>
             <div class="d-flex justify-content-center mb-4">
-                <a href="mailto:myemail@gmail.com" class="email-link">myemail@gmail.com</a>
+                <a href="mailto:myemail@gmail.com" class="email-link" title="Email Rebeca GSP">myemail@gmail.com</a>
             </div>
             <div class="social-links d-flex justify-content-center">
-                <a href="https://www.instagram.com/myinsta" target="_blank">
+                <a href="https://www.instagram.com/myinsta" target="_blank" title="Rebeca GSP Instagram Profile">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://www.github.com/mygithub" target="_blank">
+                <a href="https://www.github.com/mygithub" target="_blank" title="Rebeca GSP Github Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://www.facebook.com/myfacebook" target="_blank">
+                <a href="https://www.facebook.com/myfacebook" target="_blank" title="Rebeca GSP Facebook Profile">
                     <i class="fab fa-facebook"></i>
                 </a>
-            </div>        
+            </div>   
+            <p class="text-center mt-4">This Web page was coded by Rebeca GSP and it´s 
+                <a href="https://github.com/RebecaGSP/my_portfolio" target="_blank" title="Github Repository of Rebeca GSP">
+                    open-sourced
+                </a>
+            </p>     
         </footer>
     </div>
 </body>
