--- a/work.html
+++ b/work.html
@@ -11,37 +11,100 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ad64e497cf.js" crossorigin="anonymous"></script>
-    <title>Work</title>
+    <meta name="description" content="The work of Rebeca GSP a Front End designer from Mexico, with master in UX and extense experience in UI and Front End development">
+    <title>Work Experience - Rebeca GSP</title>
 </head>
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+            <a href="/" title="Homepage">
+                <img src="/images/logo.png" class="logo d-none d-md-block" alt="Rebeca GSP Logo">
+            </a>
+            <a href="/" title="Homepage">
+                <img src="/images/smallLogo.jpeg" class="logo d-block d-md-none" alt="Rebeca GSP Logo">
+            </a>
+            <ul>
+                <li>
+                    <a href="/" title="Homepage">
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="/about.html" title="About Rebeca GSP">
+                        About
+                    </a>
+                </li>
+                <li class="active">
+                    <a href="/work.html" title="Work of Rebeca GSP"> 
+                        Work
+                    </a>
+                </li>
+                <li>
+                    <a href="/contact.html" title="Contact Rebeca GSP">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <div class="content-container container">
         <div class="content">
             <h1 class="mb-5">Take a look at what I've been working on!</h1>
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <img src="/images/Work/yogurt.png" alt="Yogurt app" class="img-fluid mb-3 rounded">
+                    <img src="/images/Work/yogurt.png" alt="Yogurt app preview" class="img-fluid mb-3 rounded">
                     <h3 class="text-center m-0">Yogurt App</h3>
                     <p class="text-center text-muted">This was build with HTML, CSS and JS</p>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="/images/Work/weather.png" alt="Weather app" class="img-fluid mb-3 rounded">
+                    <img src="/images/Work/weather.png" alt="Weather app preview" class="img-fluid mb-3 rounded">
                     <h3 class="text-center m-0">Weather App</h3>
                     <p class="text-center text-muted">This was build with HTML, CSS and React</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <img src="/images/Work/dictionary.png" alt="Dictionary app" class="img-fluid mb-3 rounded">
+                    <img src="/images/Work/dictionary.png" alt="Dictionary app preview" class="img-fluid mb-3 rounded">
                     <h3 class="text-center m-0">Dictionary App</h3>
                     <p class="text-center text-muted">This was build with React</p>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="/images/Work/translation.png" alt="Translation app" class="img-fluid mb-3">
+                    <img src="/images/Work/translation.png" alt="Translation app preview" class="img-fluid mb-3">
                     <h3 class="text-center m-0">Translation App</h3>
                     <p class="text-center text-muted">This was build with React</p>
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+                <div>
+                    <h3>Work Inquiry</h3>
+                    <p class="text-muted">Let´s work together!</p>
+                </div>
+                <div>
+                    <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Rebeca GSP">Let´s talk here</a>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mb-4">
+                <a href="mailto:myemail@gmail.com" class="email-link" title="Email Rebeca GSP">myemail@gmail.com</a>
+            </div>
+            <div class="social-links d-flex justify-content-center">
+                <a href="https://www.instagram.com/myinsta" target="_blank" title="Rebeca GSP Instagram Profile">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.github.com/mygithub" target="_blank" title="Rebeca GSP Github Profile">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.facebook.com/myfacebook" target="_blank" title="Rebeca GSP Facebook Profile">
+                    <i class="fab fa-facebook"></i>
+                </a>
+            </div>   
+            <p class="text-center mt-4">This Web page was coded by Rebeca GSP and it´s 
+                <a href="https://github.com/RebecaGSP/my_portfolio" target="_blank" title="Github Repository of Rebeca GSP">
+                    open-sourced
+                </a>
+            </p>     
+        </footer>
     </div>
 </body>
 </html>
